# autorg_from_ddd

./: .gitignore  README.md  config.toml  lang.md  pyproject.toml
.github/workflows/: comit_stage.yml  pre_commit.yml
autorg/: clarification.py  clarification_service.py  flow.py  input.py  main.py  significado.py
autorg/application/: input.py
autorg/application/dtos/: input_dto.py
autorg/domain/aggregates/: collect.py
autorg/domain/entities/: base.py  input.py
autorg/domain/entities/pregunta/: pregunta.py  pregunta_abs.py
autorg/domain/entities/significado/: significado.py  significado_abs.py
autorg/domain/protocols/: protocols.py  repository.py
autorg/domain/services/clarification/: clarification_service.py
autorg/domain/services/flow/: flow.py  flow_abs.py
autorg/flow/: flow.py  flow_abs.py
autorg/infrastructure/adapters/: cli.py  csvrepository.py
autorg/pregunta/: pregunta.py  pregunta_abs.py
ci/: build_stage.py  commit_stage.py
config/: config.py
docs/: clarification.feature  domains.drawio  flow_gtd_mermaid  lang.md  model-2023-10-13-1750.excalidraw  model-2023-10-13-1753.excalidraw
docs/features/: clarificacion.feature  cli.feature  environment.py  ordenamiento_inputs.feature
docs/features/steps/: clarificacion.py  cli.py
test/: test_input.py
tests/: test_clarificacion_servicio.py  test_flow.py  test_input.py  test_significado.py
tests/application/: test_add_input.py  test_list_inputs.py
tests/config/: test_config.py
tests/domain/: test_collect.py  test_collect_aggregate.py  test_input_entity.py
tests/helpers/: factories.py  fake_flow.py  fake_pregunta.py  repository.py
tests/infrastructure/: test_cli.py  test_repo_csv.py
