[tool.poetry]
name = "autorg-from-ddd"
version = "0.1.0"
description = "An implementation of autorg using ddd"
authors = ["ven <alessandrovmkt@gmail.com>"]
license = "Free"
readme = "README.md"
packages = [{include = "autorg_from_ddd"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
dagger-io = "^0.8.4"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
